Added the first few pictures and information about poverty around the world, on the homepage and wrote a part of the codes for a world map.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="/style.css" type="text/css">
     <title>Document</title>
 </head>
 
 <body>
-    
-    <div class="hpimg-1"></div>
-    <div class="hpimg-2"></div>
-    <div class="hpimg-3"></div>
-    <div class="hpimg-4"></div>
-    <div class="hpimg-5"></div>
+
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #ffffff">
+
+        <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+        <a href="/" class="navbar-brand">Website</a>
+
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
+  
+            <span class="navbar-toggler-icon"></span></button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a href="index.html" class="nav-link hvr-shutter-out-vertical">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link hvr-shutter-out-vertical">Details</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="hpimg-1">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-9">
+                    <div class="textHP1 text-center">
+                        <h1>Help People In Need.</h1>
+                        <p>Around 795 million people in the world, do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save people's lives and help them lead a healthier life!
+                            <br />
+                            <button class="btn">Donate Here!</button>
+                            <span class="bottomLine"></span>
+                        </p>
+
+
+                        <!--https://www.foodaidfoundation.org/world-hunger-statistics.html-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="hpimg-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8 text-center">
+                    <section class="section2">
+                        <h2 class="header">The Struggle for Food.</h2>
+                        <p class="text">In some countries, plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to too low amounts of nutrition. For statistics, please click <a href="">here!</a>
+                            <span class="bottomLine"></span>
+                        </p>
+                        
+                        <!--https://www.foodaidfoundation.org/world-hunger-statistics.html
+                            https://insight.wfp.org/where-do-you-think-you-would-find-the-most-expensive-plate-of-food-in-the-world-408ed2856108-->
+                    </section>
+                </div>
+
+                <div class="col-sm-4">
+                    <div id="hptextimg-1"></div>
+                    <div id="hptextimg-2"></div>
+                </div>
+
+                <div id="box"></div>
+
+            </div>
+        </div>
+    </div>
+    <div class="hpimg-3">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8 text-center">
+                    <section class="section2">
+                        <h2 class="header">Lorem ipsum dolor sit.</h2>
+                        <p class="text">This causes about 45% children, under the age of five, to pass away, due to too low amounts of nutrition. <span class="bottomLine"></span>
+                            <!--https://www.foodaidfoundation.org/world-hunger-statistics.html-->
+                        </p>
+                </div>
+
+                <div class="col-sm-4">
+                    <div id="hptextimg-3"></div>
+                </div>
+
+                <div id="box"></div>
+                </section>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="hpimg-4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8 text-center">
+                    <section class="section2">
+                        <h2 class="header">Lorem ipsum dolor sit.</h2>
+                        <p class="text">In some countries, plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to too low amounts of nutrition. For statistics, please click <button class=btn><a href="">here!</a></button>
+                            <span class="bottomLine"></span>
+                            <!--https://www.foodaidfoundation.org/world-hunger-statistics.html-->
+                        </p>
+                    </section>
+                </div>
+
+                <div class="col-sm-4">
+                    <div id="hptextimg-1"></div>
+                    <div id="hptextimg-2"></div>
+                </div>
+
+                <div id="box"></div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="hpimg-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3">
+                    <div class="textHP2">
+                        <h2>Please Donate<span class="bottomLine"></span></h2>
+                        <button class="btn">Donate Here!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
@@ -24,3 +151,8 @@
 </body>
 
 </html>
+
+<!-- IMPORTANT SOURCES
+https://insight.wfp.org/where-do-you-think-you-would-find-the-most-expensive-plate-of-food-in-the-world-408ed2856108
+https://www.foodaidfoundation.org/world-hunger-statistics.html
+-->
