--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <!--Load hover.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="/style.css" type="text/css">
+
+    <!--Load CSS File-->
+    <link rel="stylesheet" href="style.css" type="text/css">
+
+    
+
+
+
     <title>Document</title>
 </head>
 
@@ -32,10 +41,13 @@
                     <a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+                    <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Details</a>
+                    <a href="#" class="nav-link hvr-shutter-out-vertical">Charities</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
                 </li>
             </ul>
         </div>
@@ -65,8 +77,9 @@
                 <div class="col-sm-12 text-center">
                     <section class="section1">
                         <h2 class="header">The Struggle for Food.</h2>
-                        <p class="text">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to malnutrition. <div id="readMore1"></div> For statistics, please click <a href="">here!</a>
-                            <span class="bottomLine"></span>
+                        <p class="text">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. <span id="dots1" class="dots">...</span><span id="more1" class="more">About 45% children, under the age of five, are caused to pass away, due to malnutrition. </span></p>
+                        <button id="readBtn1" class="readBtn">Read More</button>
+                        <p class="text">For statistics, please click <a href="statistics.html">here!</a>
                         </p>
 
                         <!--https://www.foodaidfoundation.org/world-hunger-statistics.html
@@ -92,11 +105,11 @@
                             Lowest Economic Outputs.
                         </h2>
                         <p class="textGDP">
-                            The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing. These are very low
-                            in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="">here!</a>
-                            <span class="bottomLine">
-                                
-                            </span>
+                            The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
+                            <span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
+                            in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="">here!</a></span>
+                            <button id="readBtn2" class="readBtn">Read More</button>
+
                             <blockquote class="MotherTeresaQuote text-center">
                                 "It is not how much we give, but how much love we put into giving." <br />- Mother Teresa
                             </blockquote>
@@ -150,7 +163,6 @@
             </div>
         </div>
     </div>
-    </div>
 
     <div class="hpimg-5">
         <div class="container-fluid">
@@ -168,10 +180,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
-    <script type="module" src="ReactFile.js"></script>
+    <script type="module" src="assets/js/charity.js"></script>
 </body>
 
 </html>
@@ -187,6 +196,7 @@ https://beta.grafiti.io/facts/557233-extreme-poverty-asia-2018
 images:
 https://www.google.com/search?tbm=isch&sa=1&ei=brbzXMH4OcWzsAfpl6vADw&q=poverty+in+asia&oq=poverty+in+asia&gs_l=img.3..0l2j0i8i30l5j0i24l3.4298334.4303013..4303180...0.0..0.120.1259.14j1......0....1..gws-wiz-img.......0i67j35i39j0i30.6Mg75MAzj5g#imgrc=-i0MMZ2oGeRzUM:
 https://www.google.com/search?as_st=y&tbm=isch&as_q=Mother+Teresa&as_epq=&as_oq=&as_eq=&cr=&as_sitesearch=&safe=images&tbs=sur:fc#imgrc=BY6GDuR-7JOKbM:
+https://www.google.com/search?tbm=isch&sa=1&ei=aW31XN2ZJcvhkgXpnKOACg&q=white+starving+children&oq=white+starving+&gs_l=img.1.0.0j0i8i30l4.79337015.79340392..79341546...0.0..0.133.1240.14j1......0....1..gws-wiz-img.......35i39j0i67.HNonelqwAZY#imgrc=UTp2K18BrJrViM:
 
 
 -->
