--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     <!--Load CSS File-->
     <link rel="stylesheet" href="style.css" type="text/css">
 
-    
-
-
-
     <title>Document</title>
 </head>
 
@@ -44,7 +40,7 @@
                     <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Charities</a>
+                    <a href="charities.html" class="nav-link hvr-shutter-out-vertical">Charities</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
