--- a/statistics.html
+++ b/statistics.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Document</title>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
@@ -46,24 +46,37 @@
     </nav>
 
     <section>
-
-        <div>
-            <h2>Lowest GDP Per Capita In The World (Projected).</h2>
-            <div id="gdp-per-capita-chart"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6">
+                    <div class="statisticsHeading">
+                        <h2>Lowest GDP Per Capita In The World (Projected).</h2>
+                    </div>
+                    <div class="chartStyling1">
+                        <div id="gdp-per-capita-chart"></div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="chartText1">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quidem, numquam amet aliquam blanditiis quae error. Cupiditate veritatis sapiente dignissimos doloribus qui omnis officia excepturi praesentium voluptas consequuntur
+                            quas reprehenderit est laboriosam aspernatur ad autem consequatur ex quidem doloremque dolore aperiam totam, tempora enim! Atque officia optio corrupti, repudiandae repellat ipsa reprehenderit corporis nam culpa nihil numquam
+                            amet, saepe quod deserunt, aut assumenda molestias aspernatur temporibus, necessitatibus eos! Corrupti, voluptates, illo! Cupiditate at, recusandae voluptatibus nesciunt harum iusto ratione ad eligendi itaque corporis accusantium
+                            voluptate inventore beatae voluptas molestias quasi porro unde, eveniet consequatur, illo veniam deserunt! Reprehenderit, molestiae, sed.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
 
-        <div>
 
+        <div class="chartStyling2">
             <h2>Costs of Food in Various Countries.</h2>
             <div id="costs-of-meals-chart"></div>
-
         </div>
 
-        <div>
-
+        <div class="chartStyling3">
             <h2>Lowest Gini Index Estimates From the World Bank</h2>
             <div id="gini-index-chart"></div>
-
         </div>
 
     </section>
@@ -86,7 +99,7 @@
         var name_dim = ndx.dimension(dc.pluck('country'));
         var gdp_per_capita = name_dim.group().reduceSum(dc.pluck('gdp'));
         dc.barChart('#gdp-per-capita-chart')
-            .width(1000)
+            .width(600)
             .height(250)
             .margins({ top: 10, right: 50, bottom: 30, left: 50 })
             .dimension(name_dim)
@@ -136,7 +149,7 @@
             { "country": "Namibia", "gini-index": "60.97", rank: 1 },
             { "country": "Central African Republic", "gini-index": "56.24", rank: 1 },
         ]
-        
+
         var ndx = crossfilter(gini_index);
         var name_dim = ndx.dimension(dc.pluck('country'));
         var gini_coefficient = name_dim.group().reduceSum(dc.pluck('gini-index'));
@@ -152,7 +165,7 @@
             .xAxisLabel('Country')
             .yAxisLabel('Gini Index (%)')
             .yAxis().ticks(4);
-            
+
         dc.renderAll();
     </script>
 
