Added more information of more countries and charities

--- a/charities.html
+++ b/charities.html
@@ -196,6 +196,40 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12">
+                                <div id="charity-1">
+                                    <button class="charity-1-collapse">Pakistan</button>
+
+                                    <div class="charity1-text text-center">
+                                        <h3></h3>
+                                        <p></p>
+                                        <a type="button" href="" value="" target="_blank" class="btn">Donate here</a>
+                                    </div>
+                                    <div class="charity-1-img"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12">
+                                <div id="charity-1">
+                                    <button class="charity-1-collapse">Indian</button>
+
+                                    <div class="charity1-text text-center">
+                                        <h3></h3>
+                                        <p></p>
+                                        <a type="button" href="" value="" target="_blank" class="btn">Donate here</a>
+                                    </div>
+                                    <div class="charity-1-img"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
@@ -217,7 +251,6 @@
                                             67% of girls cannot read or write, while 32% of children are engaged in childlabor! Overall, 87% of people in the Democratic Republic of Congo are under the poverty line. However, you can make a change by clicking
                                             the button below and donating any amount of money to hopefully change a person's life.</p>
                                         <a type="button" href="https://www.savethechildren.org/us/what-we-do/where-we-work/africa/democratic-republic-of-congo" value="saveTheChildrenDRC" target="_blank" class="btn">Donate here</a>
-
                                     </div>
                                     <div class="charity-1-img"></div>
                                 </div>
@@ -309,29 +342,48 @@
                                             built pre-schools, primary schools and secondary school and they also take care of disabled people, the assistance of family planning and more! Help them keep improving their assistance in Malawi by donating
                                             and find more information on why they require help and more by clicking the button below.
                                         </p>
+                                        <a type="button" href="https://www.rippleafrica.org/" value="RippleAfrica" target="_blank" class="btn">Donate here</a>
+                                    </div>
+                                    <div class="charity-1-img"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--<div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12">
+                                <div id="charity-1">
+                                    <button class="charity-1-collapse">Tanzania</button>
+
+                                    <div class="charity1-text">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, consequuntur!</p>
                                         <a type="button" href="https://www.rippleafrica.org/" value="IRC" target="_blank" class="btn">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    
+                    </div>-->
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
                                     <button class="charity-1-collapse">Somalia</button>
 
-                                    <div class="charity1-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, consequuntur!</p>
+                                    <div class="charity1-text text-center">
+                                        <h3>Save the Children</h3>
+                                        <p>
+                                            Children in Somalia are not able to go to school, as they have to look for water because of the drought. Around 49% of children are engaged in child labour and do not receive education. Moreover, 133 out of 1000 children pass away before they reach the
+                                            age of five. Save the Children has been helping around 2.7 million people in Somalia. If you want to contribute to the required support, please click on the button below.
+                                        </p>
+                                        <a type="button" href="https://www.savethechildren.org/us/what-we-do/where-we-work/africa/somalia" value="SaveTheChildrenSomalia" target="_blank" class="btn">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="container-fluid">
+                    <!--<div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
@@ -344,15 +396,17 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
                                     <button class="charity-1-collapse">South Africa</button>
 
-                                    <div class="charity1-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, consequuntur!</p>
+                                    <div class="charity1-text text-center">
+                                        <h3>Greater Good</h3>
+                                        <p>Find charities that support education, the environment, unemployed people and more in South Africa, by clicking on the button below. </p>
+                                        <a type="button" href="http://www.greatergoodsa.co.za/" value="GreaterGood" target="_blank" class="btn">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
                                 </div>
@@ -365,8 +419,11 @@
                                 <div id="charity-1">
                                     <button class="charity-1-collapse">Botswana</button>
 
-                                    <div class="charity1-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, consequuntur!</p>
+                                    <div class="charity1-text text-center">
+                                        <h3>SOS Children's Villages</h3>
+                                        <p>In Botswana, AIDS has been a big issue, which causes many orphans to require parental support, In addition, although the economic growth is going well, there is a high poverty rate and children are malnourished.
+                                            Find out more and donate by clicking the button below.</p>
+                                        <a type="button" href="https://www.sos-childrensvillages.org/where-we-help/africa/botswana" value="SOSChildrensVillagesBotswana" target="_blank" class="btn">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
                                 </div>
@@ -394,8 +451,13 @@
                                     <button class="charity-1-collapse">Haiti</button>
 
                                     <div class="charity1-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, consequuntur!</p>
+                                        <h3>Haiti-Now</h3>
+                                        <p>In Haiti, 250,000 out of a million live in social isolation, extreme poverty, they do not have enough access to food and cannot have any education. They get emotionally, physically and sexually abused, as they do
+                                            not have full citizenship or fundamental human rights or they are absent from the family. Therefore, Haiti-Now works on making solutions for mental and physical healthcare, education, housing and enterpreneurial
+                                            development.</p>
+                                        <a type="button" href="https://www.haiti-now.org/?gclid=CjwKCAjw__fnBRANEiwAuFxET2zCLeE2kcl3GCy02NX7mQCljwT0KdOlE_0BkoV2Wk1QZ-ocFomxcBoCosQQAvD_BwE" value="Haiti-Now" target="_blank" class="btn">Donate here</a>
                                     </div>
+
                                     <div class="charity-1-img"></div>
                                 </div>
                             </div>
@@ -405,7 +467,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div id="charity-1">
-                                    <button class="charity-1-collapse">Uganda</button>
+                                    <button class="charity-1-collapse">Uruguay</button>
 
                                     <div class="charity1-text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, consequuntur!</p>
