--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #ffffff">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="/" class="navbar-brand">Website</a>
+        <a href="/" class="navbar-brand">Charity Base</a>
 
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
