Added a bootstrap carousel on charities.html.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
     </nav>
     <div class="hpimg-1">
+        <!-- BG-IMG: https://www.maxpixel.net/Disease-Africa-Sick-Poverty-Young-Face-Sadness-1783794-->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-9">
@@ -134,6 +135,7 @@
         </div>
     </div>
     <div class="hpimg-3">
+        <!-- BG-IMG: https://pxhere.com/en/photo/1053497 -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 text-center">
