Added pictures into the bootstrap carousels in donate.html, included markers of the countries that the charities support, on the map and started to set up contact.html with EmailJS.

--- a/map.html
+++ b/map.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="/" class="navbar-brand">Website</a>
+        <a href="/" class="navbar-brand">Charity Base</a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
+        <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
             <span class="navbar-toggler-icon"></span></button>
 
@@ -29,20 +29,25 @@
                     <a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+                    <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Details</a>
+                    <a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
                 </li>
             </ul>
         </div>
     </nav>
+    
+    
     <div id="map"></div>
 
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDb3IndH3ybkbF1NIi9RA-vA5cSCz1emnM&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgiF5HfaHDdd-zz5JHoVC13l117w_gHIM&callback=initMap">
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
