--- a/statistics.html
+++ b/statistics.html
@@ -15,12 +15,12 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="/" class="navbar-brand">Website</a>
+        <a href="/" class="navbar-brand">Charity Base</a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
+        <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
             <span class="navbar-toggler-icon"></span></button>
 
@@ -36,10 +36,10 @@
                     <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Charities</a>
+                    <a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+                    <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
                 </li>
             </ul>
         </div>
