--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
         <a href="/" class="navbar-brand">Charity Base</a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
+        <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
             <span class="navbar-toggler-icon"></span></button>
 
@@ -40,10 +40,10 @@
                     <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a href="charities.html" class="nav-link hvr-shutter-out-vertical">Charities</a>
+                    <a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+                    <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
                 </li>
             </ul>
         </div>
@@ -57,7 +57,7 @@
                         <h1>Help People In Need.</h1>
                         <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                             <br />
-                            <button class="btn">Donate Here!</button>
+                            <a href="donate.html" value="donateButtonHP" class="btn btn-primary buttonStyle">Donate here</a>
                             <span class="bottomLine"></span>
                         </p>
 
@@ -75,7 +75,7 @@
                     <section class="section1">
                         <h2 class="header">The Struggle for Food.</h2>
                         <p class="text">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. <span id="dots1" class="dots">...</span><span id="more1" class="more">About 45% children, under the age of five, are caused to pass away, due to malnutrition. </span></p>
-                        <button id="readBtn1" class="readBtn">Read More</button>
+                        <button id="readBtn1" class="readBtn btn-info">Read More</button>
                         <p class="text">For statistics, please click <a href="statistics.html">here!</a>
                         </p>
 
@@ -105,7 +105,7 @@
                             The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
                             <span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
                             in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="">here!</a></span>
-                            <button id="readBtn2" class="readBtn">Read More</button>
+                            <button id="readBtn2" class="readBtn btn-info">Read More</button>
 
                             <blockquote class="MotherTeresaQuote text-center">
                                 "It is not how much we give, but how much love we put into giving." <br />- Mother Teresa
@@ -168,7 +168,7 @@
                 <div class="col-3">
                     <div class="textHP2">
                         <h2>Please Donate<span class="bottomLine"></span></h2>
-                        <button class="btn">Donate Here!</button>
+                        <button class="btn btn-primary">Donate Here!</button>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script type="module" src="assets/js/charity.js"></script>
+    <script type="module" src="assets/js/homepage.js"></script>
 </body>
 
 </html>
